{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 22,
  "lineage": "d8e6e373-5e8e-4ab6-4adc-52a581d5974d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-f7090d8d"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-f7090d8d"
                ]
              }
            ],
            "id": "igw-110b606a",
            "internet_gateway_id": "igw-110b606a",
            "owner_id": "218602648060"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218602648060:vpc/vpc-f7090d8d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-136a7b7f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-fec76684",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-f7090d8d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-8ffa79f1",
            "owner_id": "218602648060",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218602648060:vpc/vpc-f7090d8d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-09640b74",
            "default_route_table_id": "rtb-8ffa79f1",
            "default_security_group_id": "sg-afdb3180",
            "dhcp_options_id": "dopt-fec76684",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-f7090d8d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-8ffa79f1",
            "owner_id": "218602648060"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218602648060:loadbalancer/udagram-api-lb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "udagram-api-lb-421930493.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTPS:6443/healthz",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "udagram-api-lb",
            "idle_timeout": 600,
            "instances": [
              "i-053ca5c831fe3a650",
              "i-078a7d96776536f2a",
              "i-0c33d82a0ff52214d"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "udagram-api-lb",
            "security_groups": [
              "sg-0240f0e7b952a4d36",
              "sg-0cb45ce5613387213"
            ],
            "source_security_group": "218602648060/udagram-common",
            "source_security_group_id": "sg-0cb45ce5613387213",
            "subnets": [
              "subnet-034f15a9e4369d10c",
              "subnet-0756aa40deb0a89ab",
              "subnet-0b3ea70a754fabca7"
            ],
            "tags": {
              "Cluster": "udagram",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.elb",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4f4704a9146742a",
            "arn": "arn:aws:ec2:us-east-1:218602648060:instance/i-02b987b23da97bd4d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b987b23da97bd4d",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0405917188d65c252",
            "private_dns": "ip-172-31-111-230.ec2.internal",
            "private_ip": "172.31.111.230",
            "public_dns": "ec2-3-86-48-18.compute-1.amazonaws.com",
            "public_ip": "3.86.48.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0acddb92ff895641c",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common",
              "udagram-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3ea70a754fabca7",
            "tags": {
              "Cluster": "udagram",
              "Name": "udagram-bastion",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0841f02f5db3cf9a7",
              "sg-0cb45ce5613387213"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.ssh",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4f4704a9146742a",
            "arn": "arn:aws:ec2:us-east-1:218602648060:instance/i-0c33d82a0ff52214d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-0c33d82a0ff52214d",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09cbf3f9e13bed164",
            "private_dns": "ip-172-31-111-31.ec2.internal",
            "private_ip": "172.31.111.31",
            "public_dns": "ec2-3-84-142-203.compute-1.amazonaws.com",
            "public_ip": "3.84.142.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-008a7457710bab897",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3ea70a754fabca7",
            "tags": {
              "Name": "udagram-cp-1",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cb45ce5613387213"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4f4704a9146742a",
            "arn": "arn:aws:ec2:us-east-1:218602648060:instance/i-078a7d96776536f2a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-078a7d96776536f2a",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0623bc19a7c208a24",
            "private_dns": "ip-172-31-112-35.ec2.internal",
            "private_ip": "172.31.112.35",
            "public_dns": "ec2-3-235-105-249.compute-1.amazonaws.com",
            "public_ip": "3.235.105.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-006da4aae7f066cb8",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034f15a9e4369d10c",
            "tags": {
              "Name": "udagram-cp-2",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cb45ce5613387213"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4f4704a9146742a",
            "arn": "arn:aws:ec2:us-east-1:218602648060:instance/i-053ca5c831fe3a650",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-053ca5c831fe3a650",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0085032b5cf911daa",
            "private_dns": "ip-172-31-113-167.ec2.internal",
            "private_ip": "172.31.113.167",
            "public_dns": "ec2-3-83-193-205.compute-1.amazonaws.com",
            "public_ip": "3.83.193.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0a130c16a33e2eec2",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0756aa40deb0a89ab",
            "tags": {
              "Name": "udagram-cp-3",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cb45ce5613387213"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218602648060:security-group/sg-0cb45ce5613387213",
            "description": "cluster common rules",
            "egress": [],
            "id": "sg-0cb45ce5613387213",
            "ingress": [],
            "name": "udagram-common",
            "name_prefix": null,
            "owner_id": "218602648060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-f7090d8d"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218602648060:security-group/sg-0240f0e7b952a4d36",
            "description": "kube-api firewall",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0240f0e7b952a4d36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone to connect to tcp/6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udagram-api-lb",
            "name_prefix": null,
            "owner_id": "218602648060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram"
            },
            "timeouts": null,
            "vpc_id": "vpc-f7090d8d"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218602648060:security-group/sg-0841f02f5db3cf9a7",
            "description": "ssh access",
            "egress": [],
            "id": "sg-0841f02f5db3cf9a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow incomming SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "udagram-ssh",
            "name_prefix": null,
            "owner_id": "218602648060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram"
            },
            "timeouts": null,
            "vpc_id": "vpc-f7090d8d"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outgoing traffic",
            "from_port": 0,
            "id": "sgrule-789405485",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0cb45ce5613387213",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow all incomming traffic from members of this group",
            "from_port": 0,
            "id": "sgrule-3424718444",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0cb45ce5613387213",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodeports",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218602648060:subnet/subnet-0b3ea70a754fabca7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.111.0/24",
            "id": "subnet-0b3ea70a754fabca7",
            "map_public_ip_on_launch": true,
            "owner_id": "218602648060",
            "tags": {
              "Cluster": "udagram",
              "Name": "udagram-us-east-1a",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "vpc_id": "vpc-f7090d8d"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218602648060:subnet/subnet-034f15a9e4369d10c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.112.0/24",
            "id": "subnet-034f15a9e4369d10c",
            "map_public_ip_on_launch": true,
            "owner_id": "218602648060",
            "tags": {
              "Cluster": "udagram",
              "Name": "udagram-us-east-1b",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "vpc_id": "vpc-f7090d8d"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218602648060:subnet/subnet-0756aa40deb0a89ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.113.0/24",
            "id": "subnet-0756aa40deb0a89ab",
            "map_public_ip_on_launch": true,
            "owner_id": "218602648060",
            "tags": {
              "Cluster": "udagram",
              "Name": "udagram-us-east-1c",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "vpc_id": "vpc-f7090d8d"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        }
      ]
    }
  ]
}